--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -1658,13 +1658,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YfARHcH5I_1L"
+        "id": "YfARHcH5I_1L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "867405ba-45ca-44f9-cdd7-814122594b33"
       },
       "source": [
-        ""
+        "print('Hola')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
